# MCC-Halo-3-Custom-Games-Tracker

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE-CHANGE.md  CLAUDE.md  LICENSE  README.md  Run-Tracker-CPP.bat  Test-Game.bat  Test-Tracker.bat  aliases.json  bundle-watcher.bat  bundle.bat  package-lock.json  package.json  run-tracker.bat  tsconfig.json
cpp/: .gitignore  CMakeLists.txt  README.md  build.bat  bundle.bat  vcpkg.json
cpp/packaging/: README.txt  Setup.bat  Start.bat
cpp/src/: aliases.cpp  aliases.h  carnage.cpp  carnage.h  category.h  cli.cpp  cli.h  config.cpp  config.h  csr.cpp  csr.h  csr_gfx.cpp  csr_gfx.h  db.cpp  db.h  db_hrana.cpp  db_sqlite.cpp  db_sqlite.h  discord_gateway.cpp  discord_gateway.h  discord_webhook.cpp  discord_webhook.h  elo.cpp  elo.h  format.cpp  format.h  gui.cpp  gui.h  h3-tracker.manifest  heal.cpp  heal.h  http.cpp  http.h  main.cpp  mapinfo.cpp  mapinfo.h  medal_assets.h  render_carnage.cpp  render_carnage.h  render_csr_leaderboard.cpp  (+15 more)
deploy/: README.md  h3-tracker-update.service  h3-tracker-update.timer  h3-tracker.service  install.sh  update.sh
docs/: WHEN-BACK-AT-PC.md
next/: README.md
next/bot/: config.ts  pipeline.ts  watch.ts
next/watcher/: Run-Watcher.bat  watcher.env.example
packaging/: Install-Node.bat  Install.bat  README.txt  Run-Tracker.bat  Run-Tracker.template.bat  Run-Watcher.template.bat  Setup.bat  Start.bat  build-watcher.ps1  installer-template.bat  make-installer.py
python/: README.md  pyproject.toml
python/tests/: test_batch.py  test_classic.py  test_factors.py  test_gaussian.py  test_halo3.py  test_metrics_fitting.py  test_ts2_features.py  test_ts_parity.py
python/tests/fixtures/: generate-ts-fixture.ts  ts_parity.json
python/trueskill2/: __init__.py  batch.py  factorgraph.py  fitting.py  gaussian.py  halo3.py  match.py  metrics.py  online.py  params.py
scripts/: bundle.mjs  rebuild-entries.mjs
src/: addMissedGames.ts  aliases.ts  announce.ts  backfill.ts  board.ts  category.ts  clear.ts  config.ts  csr.ts  csrEmblems.ts  db.ts  discord.ts  elo.ts  excludeMatch.ts  fonts.ts  genCsrAssets.ts  genMedalAssets.ts  heal.ts  hidePlayer.ts  inbox.ts  inspect.ts  kd.ts  mapInfo.ts  mmr.ts  montageCsr.ts  parse.ts  parseCarnage.ts  pipeline.ts  previewCsr.ts  previewCsrHistory.ts  removeLastFfa.ts  removeMatch.ts  renderCarnage.ts  renderCsrLeaderboard.ts  renderLeaderboard.ts  renderLeaderboardPreview.ts  renderPreview.ts  restyleResults.ts  sampleReports.ts  setup.ts  (+7 more)
watcher/: Run-Watcher.bat  watcher.env.example  watcher.mjs
